--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -164,8 +164,8 @@ jobs:
         # this is just not doing any codesign or release yml generation
         run: yarn electron-builder --config
 
-      - name: Build the app (release, macOS with retries)
-        if: ${{ (env.IS_RELEASE == 'true' || env.IS_NIGHTLY == 'true') && matrix.os == 'macos-14' }}
+      - name: Build the app (release)
+        if: ${{ (env.IS_RELEASE == 'true' || env.IS_NIGHTLY == 'true') }}
         env:
           APPLE_ID: ${{ secrets.APPLE_ID }}
           APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
@@ -174,17 +174,14 @@ jobs:
           CSC_LINK: ${{ secrets.APPLE_CERTIFICATE }}
           CSC_KEY_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
           CSC_KEYCHAIN: ${{ secrets.APPLE_SIGNING_IDENTITY }}
+          WINDOWS_CERTIFICATE_THUMBPRINT: ${{ secrets.WINDOWS_CERTIFICATE_THUMBPRINT }}
           DEBUG: "electron-notarize*"
         # TODO: fix flakes on electron-notarize
-        run: |
-          retries=2
-          until yarn electron-builder --config --publish always || [[ "$retries" -le 0 ]]; do sleep 1; ((--retries)); done
-
-      - name: Build the app (release, not macOS)
-        if: ${{ (env.IS_RELEASE == 'true' || env.IS_NIGHTLY == 'true') && matrix.os != 'macos-14' }}
-        env:
-          WINDOWS_CERTIFICATE_THUMBPRINT: ${{ secrets.WINDOWS_CERTIFICATE_THUMBPRINT }}
-        run: yarn electron-builder --config --publish always
+        uses: nick-fields/retry@v3.0.0
+        with:
+          timeout_minutes: 10
+          max_attempts: 3
+          command: yarn electron-builder --config --publish always
 
       - name: List artifacts in out/
         run: ls -R out
@@ -239,7 +236,12 @@ jobs:
           CSC_KEY_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
           CSC_KEYCHAIN: ${{ secrets.APPLE_SIGNING_IDENTITY }}
           WINDOWS_CERTIFICATE_THUMBPRINT: ${{ secrets.WINDOWS_CERTIFICATE_THUMBPRINT }}
-        run: yarn electron-builder --config --publish always
+        # TODO: fix flakes on electron-notarize
+        uses: nick-fields/retry@v3.0.0
+        with:
+          timeout_minutes: 10
+          max_attempts: 3
+          command: yarn electron-builder --config --publish always
 
       - uses: actions/upload-artifact@v4
         if: ${{ env.IS_RELEASE == 'true' }}
