--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -127,9 +127,12 @@ jobs:
       shell: bash
       run: yarn tron:package
     - name: Run ubuntu/chrome snapshots
+      if: ${{ matrix.os == 'namespace-profile-ubuntu-8-cores' && matrix.shardIndex == 1 }}
       shell: bash
+      # TODO: break this in its own job, for now it's not slowing down the overall execution as ubuntu is the quickest,
+      # but we could do better. This forces a large 1/1 shard of all 20 snapshot tests that runs in about 3 minutes.
       run: |
-        PLATFORM=web yarn playwright test --config=playwright.config.ts --retries="3" --update-snapshots --grep=@snapshot  --shard=${{ matrix.shardIndex }}/${{ matrix.shardTotal }}
+        PLATFORM=web yarn playwright test --config=playwright.config.ts --retries="3" --update-snapshots --grep=@snapshot  --shard=1/1
       env:
         CI: true
         NODE_ENV: development
@@ -150,6 +153,7 @@ jobs:
       continue-on-error: true
       run: rm -r test-results
     - name: check for changes
+      if: ${{ matrix.os == 'namespace-profile-ubuntu-8-cores' && matrix.shardIndex == 1 }}
       shell: bash
       id: git-check
       run: |
