--- a/package.json
+++ b/package.json
@@ -182,6 +182,7 @@
     "eslint": "^8.0.1",
     "eslint-plugin-css-modules": "^2.12.0",
     "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-jest": "^28.10.0",
     "eslint-plugin-react": "^7.37.3",
     "eslint-plugin-suggest-no-throw": "^1.0.0",
     "happy-dom": "^16.3.0",
