--- a/.eslintrc
+++ b/.eslintrc
@@ -6,16 +6,24 @@
     "plugins": [
       "css-modules",
       "jest",
+      "jsx-a11y",
       "react",
+      "react-hooks",
       "suggest-no-throw",
+      "testing-library",
       "@typescript-eslint"
     ],
     "extends": [
-      "plugin:css-modules/recommended"
+      "plugin:css-modules/recommended",
+      "plugin:jsx-a11y/recommended",
+      "plugin:react-hooks/recommended"
     ],
     "rules": {
       "@typescript-eslint/no-floating-promises": "error",
       "@typescript-eslint/no-misused-promises": "error",
+      "jsx-a11y/click-events-have-key-events": "off",
+      "jsx-a11y/no-autofocus": "off",
+      "jsx-a11y/no-noninteractive-element-interactions": "off",
       "no-restricted-globals": [
         "error",
         {
@@ -33,6 +41,9 @@
     "overrides": [
       {
         "files": ["e2e/**/*.ts"], // Update the pattern based on your file structure
+        "extends": [
+          "plugin:testing-library/react"
+        ],
         "rules": {
           "suggest-no-throw/suggest-no-throw": "off",
           "testing-library/prefer-screen-queries": "off",
@@ -41,6 +52,9 @@
       },
       {
         "files": ["src/**/*.test.ts"],
+        "extends": [
+          "plugin:testing-library/react"
+        ],
         "rules": {
           "suggest-no-throw/suggest-no-throw": "off",
         }
