--- a/packages/codemirror-lang-kcl/package.json
+++ b/packages/codemirror-lang-kcl/package.json
@@ -28,6 +28,7 @@
     "@rollup/plugin-typescript": "^12.1.2",
     "rollup": "^4.29.1",
     "rollup-plugin-dts": "^6.1.1",
+    "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^2.1.8"
   },
   "files": [
