--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - pierremtb/issue5050-Windows-elevated-perms-prompt-should-show-app-name-not-description
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
   schedule:
