--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -56,6 +56,7 @@ nsis:
   allowElevation: true
   installerIcon: "assets/icon.ico"
   include: "./installer.nsh"
+  buildUniversalInstaller: false
 linux:
   artifactName: "${productName}-${version}-${arch}-${os}.${ext}"
   target:
