--- a/.github/workflows/cargo-bench.yml
+++ b/.github/workflows/cargo-bench.yml
@@ -24,7 +24,7 @@ name: cargo bench
 jobs:
   cargo-bench:
     name: Benchmark with iai
-    runs-on: ubuntu-latest-8-cores
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -32,7 +32,9 @@ jobs:
         run: |
           cargo install cargo-criterion
           sudo apt update
-          sudo apt install -y valgrind
+          # Need a version of valgrind before 3.21.0.
+          # https://github.com/bheisler/iai/issues/34
+          sudo apt install -y valgrind=1:3.18.1-1ubuntu2
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2.6.1
       - name: Benchmark kcl library
