--- a/.env.development
+++ b/.env.development
@@ -3,7 +3,7 @@ DEV=true
 VITE_KC_API_WS_MODELING_URL=wss://api.dev.zoo.dev/ws/modeling/commands
 VITE_KC_API_BASE_URL=https://api.dev.zoo.dev
 VITE_KC_SITE_BASE_URL=https://dev.zoo.dev
-VITE_KC_SITE_APP_URL=https://app.dev.zoo.dev
+VITE_KC_SITE_APP_URL=https://modeling-app-git-pierremtb-issue5136-turn-on-li-d04fea-kittycad.vercel.app
 VITE_KC_SKIP_AUTH=false
 VITE_KC_CONNECTION_TIMEOUT_MS=5000
 # ONLY add your token in .env.development.local if you want to skip auth, otherwise this token takes precedence!
