--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - pierremtb/issue4505-Bump-electron-builder-and--updater-version-forward
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
   schedule:
@@ -13,7 +14,8 @@ on:
   # Will checkout the last commit from the default branch (main as of 2023-10-04)
 
 env:
-  IS_RELEASE: ${{ github.ref_type == 'tag' }}
+  # IS_RELEASE: ${{ github.ref_type == 'tag' }}
+  IS_RELEASE: true
   IS_NIGHTLY: ${{ github.event_name == 'schedule' }}
 
 concurrency:
@@ -51,11 +53,11 @@ jobs:
         if: ${{ env.IS_NIGHTLY == 'true' }}
         run: yarn files:flip-to-nightly
 
-      - name: Set release version
-        if: ${{ env.IS_RELEASE == 'true' }}
-        run: |
-          export VERSION=${GITHUB_REF_NAME#v}
-          yarn files:set-version
+      # - name: Set release version
+      #   if: ${{ env.IS_RELEASE == 'true' }}
+      #   run: |
+      #     export VERSION=${GITHUB_REF_NAME#v}
+      #     yarn files:set-version
 
       - uses: actions/upload-artifact@v4
         with:
