--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -35,8 +35,11 @@ win:
     #   arch:
     #     - x64
     #     - arm64
-  sign: "./scripts/sign-win.js"
-  publisherName: "KittyCAD Inc" # needs to be exactly like on Digicert
+  signtoolOptions:
+    sign: "./scripts/sign-win.js"
+    signingHashAlgorithms:
+      - sha256
+    publisherName: "KittyCAD Inc" # needs to be exactly like on Digicert
   icon: "assets/icon.ico"
   fileAssociations:
     - ext: kcl
