--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -46,7 +46,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     needs: check-rust-changes
     steps:
+    - uses: actions/create-github-app-token@v1
+      id: app-token
+      with:
+        app-id: ${{ secrets.GH_ORG_APP_ID }}
+        private-key: ${{ secrets.GH_ORG_APP_PRIVATE_KEY }}
+        owner: ${{ github.repository_owner }}
     - uses: actions/checkout@v4
+      with:
+        token: ${{ steps.app-token.outputs.token }}
     - uses: actions/setup-node@v4
       with:
         node-version-file: '.nvmrc'
