--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -49,8 +49,8 @@ jobs:
     - uses: actions/create-github-app-token@v1
       id: app-token
       with:
-        app-id: ${{ secrets.GH_ORG_APP_ID }}
-        private-key: ${{ secrets.GH_ORG_APP_PRIVATE_KEY }}
+        app-id: ${{ secrets.MODELING_APP_GH_APP_ID }}
+        private-key: ${{ secrets.MODELING_APP_GH_APP_PRIVATE_KEY }}
         owner: ${{ github.repository_owner }}
     - uses: actions/checkout@v4
       with:
